<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.contentproviders_sqlite_example.MainActivity">


    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/show_contacts" />

    <TextView
        android:id="@+id/contactsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/findContactButton"
        android:layout_alignRight="@+id/findContactButton"
        android:layout_centerVertical="true"
        android:text="@string/contacts"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/deleteIDEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnRetrieve"
        android:hint="@string/delete_id"
        android:inputType="number"
        android:nextFocusDown="@+id/idLookupEditText" />

    <Button
        android:id="@+id/deleteIDButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRetrieve"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/deleteIDEditText"
        android:layout_toRightOf="@+id/deleteIDEditText"
        android:text="@string/deleted_id" />

    <EditText
        android:id="@+id/idLookupEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deleteIDEditText"
        android:hint="@string/find_contact"
        android:inputType="number"
        android:nextFocusDown="@+id/addNameEditText" />

    <Button
        android:id="@+id/findContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteIDButton"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/idLookupEditText"
        android:layout_toRightOf="@+id/idLookupEditText"
        android:text="@string/contacts_find" />

    <EditText
        android:id="@+id/addNameEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idLookupEditText"
        android:hint="@string/add_contact"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findContactButton"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/addNameEditText"
        android:layout_toRightOf="@+id/addNameEditText"
        android:text="@string/contacts_added" />
</RelativeLayout>
